testdata/de/dm/intellij/liferay/language/groovy/LiferayGroovyDeprecationInspectionTest/script.groovy
<warning descr="The classes from package com.liferay.util.bridges.mvc in util-bridges.jar were moved to a new package com.liferay.portal.kernel.portlet.bridges.mvc in portal-service.jar. (see LPS-50156)"><warning descr="Unused import">import <error descr="Cannot resolve symbol 'com'">com</error>.liferay.util.bridges.mvc.ActionCommand</warning></warning>